--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # Lines that start with '#' are comments.
 # For a project mostly in C, the following would be a good set of
 # exclude patterns (uncomment them if you want to use them):
-<<<<<<< HEAD
 *.[oa]
 *~
 
@@ -12,17 +11,12 @@
 # Comment the following line during build
 #.vscode
 
-=======
 
 *.[oa]
 *~
 
 .*
-*.o
-*.a
-x.*-sh*
-a.out*
-.vscode*
-*printf*
+a.*
+x.*
+lib*
 *.txt
->>>>>>> 9687ee8e3745e53c36616099adcd3b5e47d2b106
