--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Lines that start with '#' are comments.
 # For a project mostly in C, the following would be a good set of
 # exclude patterns (uncomment them if you want to use them):
-*.[oa]
+*.[oam]
 *~
 
 ._*
@@ -12,10 +12,15 @@ a.*
 x.*
 .vscode*
 
+
 *.txt
 *.tmp
 *.gch
+*.dSYM
 
 build/
 test.c
 .sub
+./ft_ls
+./ls_beta
+nonsequitur
