--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Lines that start with '#' are comments.
 # For a project mostly in C, the following would be a good set of
 # exclude patterns (uncomment them if you want to use them):
-*.[oa]
+*.[oam]
 *~
 
 ._*
@@ -11,11 +11,19 @@
 a.*
 x.*
 .vscode*
+a.out*
+test*
+ls_beta*
+./ft_ls*
 
 *.txt
 *.tmp
 *.gch
+*.dSYM
 
 build/
 test.c
 .sub
+./ft_ls
+./ls_beta
+nonsequitur
